# bigloo-lib3

./: Makefile.am  Makefile.rules  ProjectHome.md  README  acinclude.m4  bigloo-lib.m4  bigloo-lib.spec.in  bootstrap  config.scm.in  configure.ac  configure.in  make-driver
common/: Makefile.am  TODO  afile.scm  apropos.scm  bconv.scm  cgen.scm  char-hex.scm  cmd5.c  common.h  common.m4  csrfi-13.c  curl.defs  format.scm  gc.scm  ipcs.defs  md5.h  mzcompat.scm  regex-output.scm  regex.defs  socket.defs  string-lib.scm  termios.defs  test.sch  test.scm  time.defs  times.defs  trim.scm
docs/: ChangeLog  README  afile.texi  bigloo-lib-version.texi.in  bigloolib-docs.spec.in  cgen.texi  commandline.texi  common.texi  expat.texi  gtk.texi  history.texi  http.texi  iconv.texi  ldap.texi  list-lib.texi  node.texi  rdbms.texi  string-lib.texi  termios.texi  time.texi
expat/: ChangeLog  Makefile.am  TODO  bexpat.h  bigloo-expat.spec.in  expat.defs  expat.m4  xml2bigloo.scm
gd/: ChangeLog  Makefile.am  gd.defs  gd.m4  test.scm
http/: Makefile.am  TODO  http-cgi.scm  http-charset.scm  http-parse.scm  http-response.scm
ldap/: ChangeLog  Makefile.am  TODO  acinclude.m4  bigloo-ldap.spec.in  configure.in  ldap-compat.h  ldap-node.scm  ldap.m4  ldapscheme2bigloo.scm
node/: TODO  bigloo-node.spec.in  dl-node.scm  html-node.scm  test.scm
rdbms/: Makefile.am  bigloo-rdbms.spec.in  configure.in  oracle.defs  pgsql.defs  rdbms.m4  sqlite.defs  sqlite3.defs
trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.rules  NEWS  README.rpm  bigloo-lib.m4  bootstrap  configure.in  libxml2.m4  make-driver
trunk/common/: AUTHORS  ChangeLog  Makefile.rules  apropos.scm  base64.scm  bigloo-common.spec.in  cgen.scm  common.init.in  common.m4  common.sch  configure.in  crypt.scm  curl.defs  dl.defs  gc.defs  gdbm.defs  gettext.defs  history.defs  iconv.defs  locale.defs  md5.scm  misc.scm  mmap.defs  os.defs  pthread.defs  random.scm  readline.defs  srfi-1.scm  string-grammar-apply.scm  test.scm
trunk/docs/: Makefile.am  announce.texi  bigloo-lib.texi  cgen.texi  compat.texi  compile.texi  configure.in  dl.texi  gdbm.texi  gdk-refman.texi  gl.texi  gtk-refman.texi  history-example.scm  os.texi  rdbms.texi  readline.texi  readme.texi  regexp.texi
trunk/expat/: Makefile.am  bexpat.init  configure.in  expat-utils.scm  expat.defs  test.scm
trunk/gd/: bgd.init  gd.sch
trunk/http/: AUTHORS  Makefile.am  README  bigloo-http.spec.in  configure.in  html-form-adapter.scm  http-cgi.scm  http-response.scm  http.init  http.scm  test.scm
trunk/ldap/: bldap.init  cache-node.scm  ldap-schema.scm  ldap-t.sch  ldap-utils.scm  ldap.defs  test.scm
trunk/node/: ChangeLog  Makefile.am  node.scm  sgml-node.scm  tree-node.scm
trunk/rdbms/: ChangeLog  adhoc.scm  mysql.defs  oracle.defs  rdbms.init.in  rdbms.m4  rdbms.scm  test.scm
trunk/xml/: BUGS  Makefile.am  TODO  advanced.texi  bigloo-xml.texi  c14n.defs  config.texi.in  configure.in  encoding.defs  encoding.texi  entities.defs  intro.texi  readme.texi  reference.texi  version.texi  xml.init.in  xmlglobals.defs  xmlio.defs  xmlmemory.defs  xmlutils.texi  xparser.defs  xparser.texi  xpath.defs  xslt.defs  xsltutils.defs  xtree.defs  xtree.texi
xml/: ChangeLog  DONE  Makefile.am  README  authors.texi  bigloo-xml.spec.in  bigloo-xml.texi  call-template.defs  configure.in  driver.scm  entities.defs  entities.texi  getstarted.texi  intro.texi  reference.texi  test.scm  transform.defs  types.texi  version.texi  xml.m4  xmlio.defs  xmlmemory.defs  xmlregexp.defs  xmlsave.defs  xmlsave.texi  xmlutils.scm  xparser.defs  xparser.texi  xpath.defs  xpath.texi  xslt.defs  xtree.defs
