AC_INIT(Makefile.rules)
AM_INIT_AUTOMAKE(bigloo-ldap, 0.20alpha)

m4_include([../bigloo-lib.m4])
m4_include([../common/common.m4])

AC_CHECK_PROG_VER(bigloo_common, bigloo-common,
    [--version],
    [\([0-9][.][0-9]\+\)],
    [0.2[0123]],
    AC_MSG_ERROR([bigloo-common package found but is too old]))	

m4_include([ldap.m4])

AM_PROG_LIBTOOL

AC_OUTPUT([					\
  Makefile					\
  bigloo-ldap.spec				\
])
